--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.2.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
